# retail-ba-diagnostic

./: .gitignore  README.md  pyproject.toml  run_etl.sh
data/processed/: store_kpis.csv
notebooks/: notebook01.ipynb
reports/: dashboard_retail.html
src/: etl_pipeline.py
